--- a/assets/css/display.css
+++ b/assets/css/display.css
@@ -289,6 +289,8 @@ body { font-family: 'Inter', sans-serif; font-size: 16px; font-weight: 400; colo
 
 .con-m { margin-top: 128px; }
 
+/* ========================================================== */
+/* text_heading List css s ================================== */
 .heading_1 { font-size: 48px; font-weight: 700; }
 
 .heading_2 { font-size: 32px; font-weight: 700; }
@@ -301,6 +303,10 @@ body { font-family: 'Inter', sans-serif; font-size: 16px; font-weight: 400; colo
 
 .heading_6 { font-size: 12px; font-weight: 400; margin-bottom: 0; }
 
+/* text_heading List css e ================================== */
+/* ---------------------------------------------------------- */
+/* ========================================================== */
+/* color_palette css s ====================================== */
 .prime_color { background-color: #503AE7; }
 
 .sub_color { background-color: #1AD993; }
@@ -315,32 +321,47 @@ body { font-family: 'Inter', sans-serif; font-size: 16px; font-weight: 400; colo
 
 .color_5 { background-color: #F4F2FF; }
 
-.btn_1 { background-color: #503AE7; color: #fff; line-height: 48px; width: 115px; height: 48px; text-align: center; display: inline-block; cursor: pointer; display: block; }
+/* color_palette css e ====================================== */
+/* ---------------------------------------------------------- */
+/* ========================================================== */
+/* components - btn List css s ============================== */
+.btn_typ_01 { display: inline-block; padding: 12px 32px; cursor: pointer; }
 
-.btn_1:hover { background-color: #3E2DB2; transition: .5s; }
+.btn_typ_01:hover { transition: .5s; }
 
-.btn_2 { line-height: 46px; height: 48px; text-align: center; width: 147px; border: 2px solid #14142B; display: inline-block; cursor: pointer; }
+.btn_typ_02 { display: inline-block; font-weight: 600; color: #503AE7; }
 
-.btn_2:hover { border: 2px solid #1AD993; color: #1AD993; transition: .5s; }
+.btn_1 { background-color: #503AE7; color: #fff; }
 
-.btn_listen { overflow: hidden; color: #503AE7; display: inline-block; height: 100%; font-weight: 600; }
+.btn_1:hover { background-color: #3E2DB2; }
 
-.btn_listen:hover { color: #3E2DB2; transition: .5s; }
+.btn_2 { border: 2px solid #14142B; }
 
-.btn_listen:hover .play { background-color: #3E2DB2; transition: .5s; }
+.btn_2:hover { border: 2px solid #1AD993; color: #1AD993; }
 
-.btn_listen i.play { background: url(../../assets/images/ico/ico_play.png) no-repeat center; width: 32px; height: 32px; border-radius: 50%; background-color: #503AE7; display: inline-block; vertical-align: middle; margin-right: 8px; }
+/* btn_bg_del은 빼고 btn_3만 사용 (보여주기위한 배경색넣음) */
+.btn_bg_del { display: inline-block; margin-right: 48px; padding: 10px; background-color: #3E2DB2; }
 
-.btn_read { font-weight: 600; color: #503AE7; display: inline-block; line-height: 32px; }
+.btn_3 { border: 2px solid #fff; color: #fff; }
 
-.btn_read:hover { color: #3E2DB2; transition: .5s; }
+.btn_3:hover { border: 2px solid #AFB0B9; color: #AFB0B9; }
 
-.cate_pot_on { text-align: center; background-color: #503AE7; height: 48px; line-height: 48px; border-radius: 28.5px; color: #fff; font-weight: 700; display: inline-block; padding: 0 32px; }
+.btn_listen, .btn_read { height: 100%; }
 
-.cate_pot { height: 48px; line-height: 48px; border-radius: 28.5px; color: #AFB0B9; font-weight: 700; border: 1px solid #AFB0B9; display: inline-block; padding: 0 32px; }
+.btn_listen:hover, .btn_read:hover { color: #3E2DB2; transition: .5s; }
 
-.cate_pot a { display: block; height: 100%; padding: 0 32px; text-align: center; }
+.btn_listen:hover .play, .btn_read:hover .play { background-color: #3E2DB2; transition: .5s; }
 
+.btn_listen i.play, .btn_read i.play { background: url(../../assets/images/ico/ico_play.png) no-repeat center; width: 32px; height: 32px; border-radius: 50%; background-color: #503AE7; display: inline-block; vertical-align: middle; margin-right: 8px; }
+
+/* components - btn List css e ============================== */
+/* ---------------------------------------------------------- */
+.cate_pot { display: inline-block; padding: 12px 32px; border: 1px solid #AFB0B9; border-radius: 28.5px; font-weight: 700; color: #AFB0B9; }
+
+.cate_pot.on { border: 1px solid #503AE7; background-color: #503AE7; color: #fff; }
+
+/* ========================================================== */
+/* sns List css s =========================================== */
 .facebook_b { background: url(../../assets/images/ico/ico_facebook.svg) no-repeat center; width: 24px; height: 24px; display: inline-block; }
 
 .linkedIn_b { background: url(../../assets/images/ico/ico_linkedIn.svg) no-repeat center; width: 24px; height: 24px; display: inline-block; }
@@ -353,16 +374,11 @@ body { font-family: 'Inter', sans-serif; font-size: 16px; font-weight: 400; colo
 
 .instagram_s { background: url(../../assets/images/ico/ico_instagram.svg) no-repeat center/100%; width: 16px; height: 16px; display: inline-block; }
 
-.section_tit_1 { position: relative; }
-
-.section_tit_1 h2 { font-size: 32px; }
-
-.section_tit_1 p { line-height: 24px; margin-top: 16px; }
-
-.section_tit_1 > .btn_1 { position: absolute; bottom: 0; right: 0; width: 195px; }
-
-/* layout_your_inbox */
-.inbox_wrap { position: relative; display: flex; justify-content: center; align-items: center; padding: 90px 0; margin: 128px 80px 0 80px; text-align: center; color: #fff; background-color: #503AE7; z-index: 1; }
+/* sns List css e =========================================== */
+/* ---------------------------------------------------------- */
+/* ========================================================== */
+/* layout_your_inbox css s ================================== */
+.inbox_wrap { position: relative; display: flex; justify-content: center; align-items: center; padding: 90px 0; text-align: center; color: #fff; background-color: #503AE7; z-index: 1; }
 
 .inbox_wrap::after { content: ''; display: block; width: 100%; height: 100%; background: url(../../assets/images/contents/bg_vector.png) no-repeat bottom; position: absolute; left: 0; top: 0; opacity: 0.1; z-index: -1; }
 
@@ -376,57 +392,48 @@ body { font-family: 'Inter', sans-serif; font-size: 16px; font-weight: 400; colo
 
 .inbox_wrap .email_send::after { background: url(../../assets/images/ico/mic_1.png) no-repeat; right: 10%; top: 50%; }
 
-/* layout_list */
-.item_list_wrap { display: flex; justify-content: space-between; }
+/* layout_your_inbox css e =================================== */
+/* ---------------------------------------------------------- */
+/* ========================================================== */
+/* layout_banner css s ===================================== */
+/* layout_banner css e ====================================== */
+/* ---------------------------------------------------------- */
+/* ========================================================== */
+/* promotion only css s ===================================== */
+.promo_only { color: #fff; margin: 30px 0; padding: 20px; }
 
-.item_list_wrap > li { width: calc((100% - 26px ) / 3); }
+.promo_only > p { margin-top: 20px; }
 
-.item_list_wrap > li .item { display: block; }
-
-.item_list_wrap > li .item > img { width: 100%; }
-
-.item_list_wrap > li .item > div { color: var(--fontColor); }
-
-.item_list_wrap > li .item .heading_3 { display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; line-height: 30px; margin-top: 16px; }
-
-.item_list_wrap > li .item .heading_5 { line-height: 24px; margin-top: 16px; }
-
-.item_list_wrap > li .item .btn_listen { margin-top: 16px; }
-
-.item_list_wrap > li:first-child > a { width: 100%; height: 100%; }
-
-.item_list_wrap > li:first-child > a > img { height: 100%; }
-
+/* promotion only css e ===================================== */
+/* ---------------------------------------------------------- */
 /* tablet 지정 */
-@media only screen and (max-width: 768px) { .heading_1 { font-size: 30px; }
-  .heading_2 { font-size: 28px; }
+@media only screen and (max-width: 768px) { .heading_1 { font-size: 28px; }
+  .heading_2 { font-size: 24px; }
   .heading_3 { font-size: 18px; }
   .heading_4 { font-size: 16px; }
   .heading_5 { font-size: 14px; }
   .heading_6 { font-size: 12px; }
   .con-m { margin-top: 80px; }
   .con_pd { padding: 0 20px; }
-  .section_tit_1 > a { position: inherit !important; margin-top: 20px; }
   /* your_inbox */
   .inbox_wrap { margin: 80px 0 0 0; }
   .inbox_wrap .email_send { margin: 32px auto 0 auto; }
-  .inbox_wrap .email_send::before { left: 0; }
-  /* layout_list */
-  .item_list_wrap > li .item .heading_3 { line-height: 20px; margin-top: 5px; }
-  .item_list_wrap > li .item .heading_5 { line-height: 20px; margin-top: 5px; }
-  .item_list_wrap > li .item .btn_listen { margin-top: 5px; } }
+  .inbox_wrap .email_send::before { left: 0; } }
 
 /* //tablet 지정 */
 /* mobile 지정 */
-@media only screen and (max-width: 425px) { .con-m { margin-top: 30px; }
+@media only screen and (max-width: 425px) { .heading_1 { font-size: 20px; }
+  .heading_2 { font-size: 18px; }
+  .heading_3 { font-size: 16px; }
+  .heading_4 { font-size: 14px; }
+  .heading_5 { font-size: 12px; }
+  .heading_6 { font-size: 10px; }
+  .con-m { margin-top: 30px; }
   /* your_inbox */
   .inbox_wrap { background-image: none; padding: 40px 0; }
   .inbox_wrap .heading_2 { font-size: 16px; }
   .inbox_wrap .email_send { margin: 16px auto 0 auto; }
-  .inbox_wrap .email_send::before, .inbox_wrap .email_send::after { display: none; }
-  /* layout_list */
-  .item_list_wrap { display: block; }
-  .item_list_wrap > li { width: 100%; margin-bottom: 26px; } }
+  .inbox_wrap .email_send::before, .inbox_wrap .email_send::after { display: none; } }
 
 /* //mobile 지정 */
 /* base e =================================================== */
@@ -438,6 +445,32 @@ body { font-family: 'Inter', sans-serif; font-size: 16px; font-weight: 400; colo
 /* ========================================================== */
 /* ---------------------------------------------------------- */
 /* container s ============================================== */
+.layout_banner_wrap { color: #fff; position: relative; width: 100%; padding-top: 46%; }
+
+.layout_banner_wrap::after { content: ''; display: block; clear: both; }
+
+.layout_banner_wrap > div { position: absolute; left: 11%; top: 50%; width: 34%; transform: translateY(-50%); }
+
+.layout_banner_wrap > div > p { margin-bottom: 32px; }
+
+.layout_banner_wrap > div > p:nth-child(2) { line-height: 28px; }
+
+.page_host .layout_banner_wrap { background: url(../../assets/images/contents/host_banner.png) no-repeat center; }
+
+.page_padcast .layout_banner_wrap { background: url(../../assets/images/contents/potcast_banner_2.png) no-repeat center; }
+
+/* tablet 지정 */
+@media only screen and (max-width: 768px) { .layout_banner_wrap { background-size: cover; }
+  .layout_banner_wrap > div { left: 8%; top: 50%; width: 70%; }
+  .layout_banner_wrap > div > p { margin-bottom: 12px; }
+  .layout_banner_wrap > div > p:nth-child(2) { line-height: 18px; } }
+
+/* tablet */
+/* mobile 지정 */
+@media only screen and (max-width: 425px) { .layout_banner_wrap > div { left: 1%; width: 100%; }
+  .layout_banner_wrap > div > p { margin-bottom: 10px; } }
+
+/* mobile */
 /* container e ============================================== */
 /* ---------------------------------------------------------- */
 /* ========================================================== */
@@ -533,7 +566,7 @@ header .gnb .sub_menu ul.sns li a { vertical-align: sub; }
 /* ========================================================== */
 /* ---------------------------------------------------------- */
 /* footer s ================================================= */
-.footer_sponsors { color: #fff; padding: 72px 0; margin: 0 80px; background-color: #503AE7; text-align: center; transform: translateY(30%); }
+.footer_sponsors { color: #fff; padding: 72px 0; background-color: #503AE7; text-align: center; transform: translateY(30%); }
 
 .footer_sponsors .logoipsum { margin-top: 64px; font-size: 0; }
 
@@ -554,7 +587,7 @@ header .gnb .sub_menu ul.sns li a { vertical-align: sub; }
 .copyright { height: 64px; line-height: 64px; color: #fff; background-color: #503AE7; text-align: center; font-weight: 700; }
 
 /* ---------------------------------------------------------- */
-@media only screen and (max-width: 768px) { .footer_sponsors { padding: 42px 42px !important; margin: inherit; transform: inherit; }
+@media only screen and (max-width: 768px) { .footer_sponsors { padding: 42px 42px !important; transform: inherit; }
   .footer_sponsors .logoipsum { margin-top: 34px; }
   .footer_sponsors .logoipsum img { margin-right: 10px !important; padding: 10px; }
   .footer_con { padding: 60px 20px; flex-direction: column; transform: inherit; }
@@ -604,6 +637,57 @@ header .gnb .sub_menu ul.sns li a { vertical-align: sub; }
 /* ========================================================== */
 /* ---------------------------------------------------------- */
 /* list s =================================================== */
+/* list_type 공통 */
+.list_type { color: var(--fontColor); }
+
+.list_type .typ_list_wrap ul { overflow: hidden; display: grid; gap: 16px; grid-template-columns: 1fr 1fr 1fr; }
+
+.list_type .typ_list_wrap ul li { position: relative; }
+
+.list_type .typ_list_wrap ul li .typ_sub_wrap { margin-top: 32px; }
+
+.list_type .typ_list_wrap ul li .typ_sub_wrap h3 { display: block; line-height: 26px; }
+
+.list_type .typ_list_wrap ul li .typ_sub_wrap p, .list_type .typ_list_wrap ul li .typ_sub_wrap a.btn_listen { margin-top: 10px; }
+
+.list_type .typ_list_wrap ul li .typ_sub_wrap .sub_txt { line-height: 24px; }
+
+.list_type .typ_list_wrap ul li:last-child { margin-right: 0; }
+
+/* list_type_01 */
+.list_typ_01 .typ_tit_wrap { position: relative; }
+
+.list_typ_01 .typ_tit_wrap h2 { font-size: 32px; }
+
+.list_typ_01 .typ_tit_wrap p { line-height: 24px; margin-top: 16px; }
+
+.list_typ_01 .typ_tit_wrap > .btn_1 { position: absolute; bottom: 0; right: 0; width: 195px; }
+
+.list_typ_01 .typ_list_wrap ul li { margin-top: 64px; }
+
+.list_typ_01 .typ_list_wrap ul li .typ_list_img { width: 100%; height: 256px; }
+
+.list_typ_01 .typ_list_wrap ul li .typ_sub_wrap a.mute { position: absolute; top: 16px; right: 16px; color: #fff; }
+
+.list_typ_01 .typ_list_wrap ul li .typ_sub_wrap a.mute i { background: url(../../assets/images/ico/ico_vector.png) no-repeat center/14px; width: 40px; height: 40px; border-radius: 50%; background-color: #503AE7; display: inline-block; vertical-align: middle; }
+
+/* list_type_02 */
+.list_typ_02 .typ_list_wrap ul li a { display: block; }
+
+.list_typ_02 .typ_list_wrap ul li a .typ_list_img { width: 100%; height: 100%; }
+
+.list_typ_02 .typ_list_wrap ul li a .typ_sub_wrap h3 { display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; }
+
+@media only screen and (max-width: 768px) { /* list_type 공통 */
+  .list_type .typ_list_wrap ul { display: block; }
+  .list_type .typ_list_wrap ul li { width: 100%; margin: 0 0 30px 0; }
+  .list_type .typ_list_wrap ul li .typ_sub_wrap { margin-top: 20px; }
+  .list_type .typ_list_wrap ul li .typ_sub_wrap p, .list_type .typ_list_wrap ul li .typ_sub_wrap a.btn_listen { margin-top: 10px; }
+  /* list_typ_01 */
+  .list_typ_01 .typ_tit_wrap > a { position: inherit !important; margin-top: 20px; }
+  /* list_typ_02 */
+  .list_typ_02 .typ_list_wrap ul li .typ_sub_wrap h3 { line-height: 20px; } }
+
 /* list e =================================================== */
 /* ---------------------------------------------------------- */
 /* ========================================================== */
