--- a/dev/css_dev/display/_list.scss
+++ b/dev/css_dev/display/_list.scss
@@ -7,5 +7,170 @@
 /* ---------------------------------------------------------- */
 /* list s =================================================== */
 
+
+
+
+/* list_type 공통 */
+.list_type{
+  color: var(--fontColor);
+  .typ_list_wrap{
+    ul {
+      overflow: hidden;
+      display: grid;
+      gap: 16px;
+      grid-template-columns: 1fr 1fr 1fr;
+      li {
+        position: relative;
+        //width: calc((100% - 36px ) / 3);
+        .typ_sub_wrap {
+          margin-top: 32px;
+          h3 {
+            display: block;
+            line-height: 26px;
+          }
+          p,
+          a.btn_listen {
+            margin-top: 10px;
+          }
+          .sub_txt{
+            line-height: 24px;
+          }
+        }
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+    }
+  }
+}
+
+/* list_type_01 */
+.list_typ_01{
+  .typ_tit_wrap {
+    position: relative;
+    h2 {
+      font-size: 32px;
+    }
+    p {
+      line-height: 24px;
+      margin-top: 16px;
+    }
+    >.btn_1 {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 195px;
+    }
+  }
+  .typ_list_wrap{
+    ul {
+      li {
+        margin-top: 64px;
+        .typ_list_img {
+          width: 100%;
+          height: 256px;
+        }
+        .typ_sub_wrap {
+          a.mute {
+            position: absolute;
+            top: 16px;
+            right: 16px;
+            color: #fff;
+            i {
+              background: url(../../assets/images/ico/ico_vector.png) no-repeat center / 14px;
+              width: 40px;
+              height: 40px;
+              border-radius: 50%;
+              background-color: #503AE7;
+              display: inline-block;
+              vertical-align: middle;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+/* list_type_02 */
+.list_typ_02{
+  .typ_list_wrap{
+    ul {
+      li {
+        a{
+          display: block;
+          .typ_list_img {
+            width: 100%;
+            height: 100%;
+          }
+          .typ_sub_wrap {
+            h3 {
+              display: -webkit-box;
+              -webkit-line-clamp: 2;
+              -webkit-box-orient: vertical;
+              overflow: hidden;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+
+
+// mdq_tab
+@media only screen and (max-width: 768px) {
+
+  /* list_type 공통 */
+  .list_type{
+    .typ_list_wrap {
+      ul {
+        display: block;
+        //margin: 40px 0 0 0;
+        li {
+          width: 100%;
+          margin: 0 0 30px 0;
+          .typ_sub_wrap {
+            margin-top: 20px;
+            p,
+            a.btn_listen {
+              margin-top: 10px;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  /* list_typ_01 */
+  .list_typ_01{
+    .typ_tit_wrap {
+      >a {
+        position: inherit !important;
+        margin-top: 20px;
+      }
+    }
+  }
+
+  /* list_typ_02 */
+  .list_typ_02{
+    .typ_list_wrap{
+      ul {
+        li {
+          .typ_sub_wrap {
+            h3 {
+              line-height: 20px;
+            }
+          }
+        }
+      }
+    }
+  }
+
+
+}// mdq_tab
+
+
 /* list e =================================================== */
 /* ---------------------------------------------------------- */
